arkts_static_test/09_Classes/ets_cases/9.7.7_Method_Body/compile-pass/CLS_09_07_025_PASS_ALL_PATHS_RETURN.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id CLS_09_07_025_PASS_ALL_PATHS_RETURN
 * @expect compile-pass
 * @section 9.7.7
 * @design 所有路径都有return
 * @note 正向用例
 */
class Good { getVal(cond: boolean): int { if (cond) { return 1 } else { return 0 } } }
